# pytch-webapp

./: .eslintrc.js  .gitignore  LICENSE.md  README.md  cypress.config.ts  cypress.json  index.html  package-lock.json  package.json  prettier.config.mjs  tsconfig.json  vite.config.ts
cypress/: tsconfig.json
cypress/common/: utils.ts
cypress/e2e/: canvas-content-utils.ts  code-editor.cy.ts  crop-scale-constants.ts  crop-scale.cy.ts  fullscreen.cy.ts  general-navigation.cy.ts  google-drive.cy.ts  help-sidebar.cy.ts  keypresses.cy.ts  (+16 more)
doc/: pyproject.toml  requirements_dev.txt
doc/source/: conf.py  index.rst
doc/source/developer/: assets-library.rst  content-hashes.rst  environment-variables.rst  google-drive.rst  index.rst  linked-content.rst  study-data.rst  testing.rst  zipfile-format.rst
doc/source/internals/: index.rst  tutorials.rst
doc/source/user/: errors-and-debugging.rst  graphics-and-sounds.rst  index.rst  interface.rst  printing-output.rst  running-your-program.rst  tutorials.rst  writing-code.rst
public/: index.html
src/: App.tsx  constants.ts  dot-env-local-development  env-utils.ts  font-awesome-lib.ts  help-sidebar.scss  index.tsx  main.tsx  project-list.scss  pytch-ide.scss  pytch-jr-common.scss  pytch-jr-ide.scss  pytch-jr-lesson.scss  pytch-mixins.scss  pytch-reset.scss  pytch-tutorial.scss  pytch-variables.scss  pytch-welcome.scss  pytch.scss  react-app-env.d.ts  store.ts  utils.ts
tools/editor-style-images/: make_images.py  pyproject.toml
unit-tests/: guessed-mime-type.spec.ts  tsconfig.json
website-layer/: dot-htaccess  make.sh
(+285 files in other folders)
