[tool.poetry]
name = "pytch-webapp-doc"
version = "0.1.0"
description = ""
authors = ["Ben North <ben.north@tcd.ie>"]
readme = "README.md"
packages = [{include = "pytch_webapp_doc"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
