[tool.poetry]
name = "pytch-webapp-doc"
version = "0.1.0"
description = ""
authors = ["Ben North <ben.north@tcd.ie>"]
readme = "README-developing-docs.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.0.1"
sphinx-autobuild = "^2021.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
