[tool.poetry]
name = "editor-style-images"
version = "0.1.0"
description = ""
authors = ["Ben North <ben.north@tcd.ie>"]
packages = []

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pillow = "^10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
